[gd_scene load_steps=4 format=3 uid="uid://bll77xvh7mjij"]

[ext_resource type="Script" uid="uid://qdt7d1omejcu" path="res://ui/main_ui.gd" id="1_v5qxn"]
[ext_resource type="FontFile" uid="uid://dubdjkwl2ye3s" path="res://assets/fonts/MunroSmall-wPZw.ttf" id="2_3lvfr"]

[sub_resource type="LabelSettings" id="LabelSettings_hlo7n"]
font = ExtResource("2_3lvfr")
font_size = 10

[node name="MainUi" type="Control" node_paths=PackedStringArray("DayLabel", "TimeLabel", "MoneyLabel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5qxn")
DayLabel = NodePath("DayLabel")
TimeLabel = NodePath("TimeLabel")
MoneyLabel = NodePath("MoneyLabel")

[node name="DenoterLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Day:
Time:
Money:"
label_settings = SubResource("LabelSettings_hlo7n")

[node name="DayLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 1.0
offset_right = 79.0
offset_bottom = 24.0

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 24.0
offset_right = 88.0
offset_bottom = 47.0

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 56.0
offset_right = 104.0
offset_bottom = 79.0
